# edx-gea

./: .gitignore  CHANGELOG.md  README.rst  setup.cfg  setup.py
.circleci/: config.yml
docs/: Makefile  conf.py  index.rst  references.rst  requirements.txt
edx_gea/: __init__.py  forms.py  gea.py  gea_assessment.py  tests.py
edx_gea/locale/fr/LC_MESSAGES/: django.mo  django.po
edx_gea/static/css/: gea.css
edx_gea/static/html/: gea.html
edx_gea/static/js/src/: gea.js
edx_gea/templates/edx_gea/: form_errors.html  staff.html  student.html
