;;
;; FUN package
;;
[metadata]
name = edx-gea
version = 0.2.0
description = An XBlock to grade external activities
long_description = file: README.rst
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/edx-gea
license= AGPL 3.0
keywords = Django, Open edX, MOOC, Xblock
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    XBlock
packages = find:
zip_safe = False

[options.entry_points]
xblock.v1 =
    edx_gea = edx_gea:GradeExternalActivityXBlock

[options.extras_require]
dev =
    wheel
# edx-gea is supposed to work integrated in an Open edX instance where
# xblock-utils is already installed. xblock-utils is required by edx-gea but
# cannot be defined as a base requirement as it is not published in PyPI. To
# avoid breaking our packaging CI, we define xblock-utils as an extra
# requirement labeled "edx".
edx =
    xblock-utils

[options.package_data]
edx_gea =
    locale/*/LC_MESSAGES/*.po
    public/static/images/*.gif
    static/css/*.css
    static/js/src/*.js
    templates/edx_gea/*.html

[options.packages.find]
exclude =
    docs

[wheel]
universal = 1
